--- a/k8s/backend-deployment.yaml
+++ b/k8s/backend-deployment.yaml
@@ -17,7 +17,7 @@ spec:
         - name: ghcr-creds
       containers:
         - name: backend
-          image: ghcr.io/aakash6060/backend:latest
+          image: ghcr.io/aakash6060/backend:6eddb2bdae74f9f7432431cbc65fa4c8b193e2cc
           ports:
             - containerPort: 5000
               name: http
